--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
     />
 
   </head>
-  <body>
+  <body style = "background: rgb(38, 91, 112)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -44,5 +44,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
 </html>
